overflow fix

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -11,7 +11,7 @@ body {
   background-color: #333;
   margin: 0;
   padding: 2vh 0;
-  overflow-y: hidden;
+  overflow: hidden;
   font-family: Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
